# verbrenner-vs-elektro

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
docs/: index.html
outputs/: sample_result.csv  sample_result.json
src/tco_app/: __init__.py  api_clients.py  cache.py  calculator.py  cli.py  defaults.py  finance.py  models.py  pricing.py  reporting.py  web.py  wsgi.py
tests/: test_conversion.py  test_energy.py  test_global_acquisition.py  test_leasing.py
