[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "ev-ice-tco"
version = "0.1.0"
description = "CLI und Web-UI für realistischen EV-vs-ICE TCO Vergleich"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.32.0",
  "Flask>=3.0.0",
  "gunicorn>=21.2.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
]

[project.scripts]
tco-cli = "tco_app.cli:main"
tco-web = "tco_app.web:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
